<resources>
    <string name="app_name">Chat Connect</string>
    <string name="onboarding_text">Connect\nfriends\neasily and\nquickly</string>
    <string name="sign_up_with_e_mail">Sign Up With E-mail</string>
    <string name="existing_account">Existing account?</string>
    <string name="sign_text">Get chatting with friends and family today by\n signing up for our ChatApp!</string>
    <string name="log_in_u"><u>Log in</u></string>
    <string name="sign_up_u"><u>Sign Up with E-mail</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_to_chatapp">Log in to ChatApp</string>
    <string name="login_text">Welcome back!\nSign in using your email to continue us</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">Or</string>
    <string name="username">Username</string>
    <string name="password_hint">**********</string>
    <string name="email_hint">example@example.com</string>
    <string name="username_hint">example</string>
    <string name="message">Message</string>
    <string name="calls">Calls</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="search_someone">Search someone</string>
    <string name="chat_message">Chat Message</string>

</resources>